--- a/appendices.tex
+++ b/appendices.tex
@@ -27,12 +27,18 @@ Except for where it is important, the explicit time, space or frequency dependen
  \toprule
 Abbreviation & Meaning	\\
  \hline
-PhC 		& Photonic crystal\\
-MM			& Metamaterial\\
-PBG			& Photonic band-gap\\
 FDTD 		& Finite-difference time-domain (numerical simulation)\\
+FDFD 		& Finite-difference frequency-domain (numerical simulation)\\
+FEM 		& Finite-element method (numerical simulation)\\
+FFT 		& Fast Fourier transform (algorithm)\\
+FDM 		& Filter diagonalisation method (algorithm)\\
+MM		& Metamaterial\\
+NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
+PBG		& Photonic band-gap\\
+PhC 		& Photonic crystal\\
+PML 		& Perfectly matched layers (absorber in simulation)\\
+PWEM 		& Plane-wave expansion method (numerical simulation)\\
 TDTS 		& Time-domain terahertz spectroscopy\\
-FDM 		& Filter diagonalisation method (signal processing algorithm)\\
  \bottomrule
  \end{tabular} \end{table}
 %}}}
