--- a/title.tex
+++ b/title.tex
@@ -12,7 +12,7 @@ Department of Physical Electronics\\
 
 \large{doctoral thesis}\\
 \vspace{5mm}
-\textbf{\huge Metamaterials for Terahertz spectral range\\}
+\textbf{\huge Metamaterials for the terahertz spectral range\\}
 \end{center}
 
 \date{ } 			
