fdtd field separation etc

--- a/appendices.tex
+++ b/appendices.tex
@@ -32,12 +32,13 @@ FDFD 		& Finite-difference frequency-domain (numerical simulation)\\
 FEM 		& Finite-element method (numerical simulation)\\
 FFT 		& Fast Fourier transform (algorithm)\\
 FDM 		& Filter diagonalisation method (algorithm)\\
-MM		& Metamaterial\\
+MM			& Metamaterial\\
 NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
-PBG		& Photonic band-gap\\
+PBG			& Photonic band-gap\\
 PhC 		& Photonic crystal\\
 PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (numerical simulation)\\
+STO			& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 TDTS 		& Time-domain terahertz spectroscopy\\
  \bottomrule
  \end{tabular} \end{table}
