--- a/theory.tex
+++ b/theory.tex
@@ -345,6 +345,9 @@ The downsides of the spatial-dispersive model of media is that it is more compli
 
 \section{Electromagnetic waves in periodic structures}
 \subsection{(The mathematical problem)}
+%In a given time the wave in a periodic medium takes on the form of Bloch wave (\ref{eq_bloch}): 
+ %$\mathbf{E}(\mathbf{r}) = \mathrm{e}^{\mathrm{i}Kz} \cdot \mathbf{u}(\mathbf{r})$, i.e. it is a product of a harmonic \textit{envelope} and a cell-periodic \textit{mode}. Computing the dispersion curves involves computing the envelope wavenumber $K = K(f)$ for each frequency $f$ in the desired spectrum. The information about the mode $\mathbf{u}(\mathbf{r})$ is not used and instead the metamaterial cell is treated as if it was a homogeneous medium -- therefore this procedure is also called \textit{homogenisation}.
+
 \paragraph{The Bloch-Floquet theorem}%{{{
 % TODO define periodicity
 
